--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -335,7 +335,7 @@
                     <key>BundlePath</key>
                     <string>AppleALC.kext</string>
                     <key>Comment</key>
-                    <string>V1.8.8 | AppleALC.kext</string>
+                    <string>V1.8.9 | AppleALC.kext</string>
                     <key>Enabled</key>
                     <true/>
                     <key>ExecutablePath</key>
@@ -631,7 +631,7 @@
                 <key>CustomSMBIOSGuid</key>
                 <true/>
                 <key>DisableIoMapper</key>
-                <true/>
+                <false/>
                 <key>DisableIoMapperMapping</key>
                 <false/>
                 <key>DisableLinkeditJettison</key>
@@ -894,13 +894,13 @@
                 <key>AdviseFeatures</key>
                 <false/>
                 <key>MLB</key>
-                <string>F5K1406004NK3F7JA</string>
+                <string>F5K024802CDK3F7A8</string>
                 <key>MaxBIOSVersion</key>
                 <false/>
                 <key>ProcessorType</key>
                 <integer>3841</integer>
                 <key>ROM</key>
-                <data>CkaWn7ot</data>
+                <data>6xm7TmIY</data>
                 <key>SpoofVendor</key>
                 <true/>
                 <key>SystemMemoryStatus</key>
@@ -908,9 +908,9 @@
                 <key>SystemProductName</key>
                 <string>MacPro7,1</string>
                 <key>SystemSerialNumber</key>
-                <string>F5KGH2ZYP7QM</string>
+                <string>F5KCVJZBP7QM</string>
                 <key>SystemUUID</key>
-                <string>F29B8A70-D691-483C-B3F8-3674C8C93A7B</string>
+                <string>318244FB-930D-410A-BB87-E8E35E3D1353</string>
             </dict>
             <key>UpdateDataHub</key>
             <true/>
